# ant

./: .dockerignore  .gitignore  .gitmodules  .ocamlformat  AGENTS.md  ANF.md  ARTIFACT_PLAN.md  CompileRegMemo.md  Dockerfile  EVALUATION.md  Makefile  README.md  agents.md  ant.opam  compose.yaml  dependency.md  docker-compose.yml  dune  dune-project  eval_lisp_wrap.json  eval_steps.json  index.html  internal.md  nightly.py  nightly.sh  optimus.opam  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: autofix.yml  ci.yml  pages.yml
PPX/: Codegen.ml  dune
bench/: Intmap_bench.ml  List_bench.ml  MonoidHash_bench.ml  bench_ant.ml  dune
data/: at_Filter.json  at_Map.json  at_Rev.json  mk_MS.json  mk_Map.json  mk_Pair.json  mk_QS.json  mk_Rev.json  mk_program.json  th_Filter.json  th_Map.json  th_Pair.json  th_QS.json  th_Rev.json  user1_Append.json  user1_Filter.json  user1_IS.json  user2_Append.json  user2_MS.json  user2_Pair.json  user2_QS.json  user3_Append.json  user3_IS.json  user3_MS.json
docker/: entrypoint.sh
docs/: AGENTS.md  README.md  dependency.md  internal.md  motivation.md
dune.lock/: batteries.3.10.0.pkg  batteries.3.11.0.pkg  core_bench.v0.17.0.pkg  core_extended.v0.17.0.pkg  delimited_parsing.v0.17.0.pkg  dune-configurator.3.23.0.pkg  lock.dune  ocaml-base-compiler.5.3.1.pkg  ocaml-compiler.5.3.0.pkg  ocaml-compiler.5.3.1.pkg  ocaml.5.3.1.pkg  pprint.20230830.pkg  ppx_deriving.6.0.3.pkg  ppx_expect.v0.17.2.pkg  ppxlib.0.35.0.pkg  ppxlib_jane.v0.17.2.pkg  record_builder.v0.17.0.pkg  relocatable-compiler.5.3.1.20251109.1.pkg
examples/: AnfJoinIf.ant  AnfJoinMatch.ant  Append.ant  Arith.ant  Cps.ant  Ctx.ant  Defn.ant  InsertionSort.ant  Lisp.ant  List.ant  Live.ant  MergeSort.ant  Pair.ant  Pat.ant  QuickSort.ant  Reverse.ant  SimpleFilter.ant  Syntax.ant  Syntax.ops  TailRec.ant  Test.ant  Test.ops  Tyck.ant  Typing.ant
lib/: AnfToCfg.ml  AntHashtbl.ml  AppList.ml  BlockInlining.ml  CfgLiveness.ml  Code.ml  Common.ml  Compile.ml  CompileFfi.ml  CompileMemo.ml  CompilePlain.ml  CompileRegMemo.ml  CompileSeq.ml  CompileType.ml  ControlFlowGraph.ml  Dependency.ml  FingerTree.ml  Fresh.ml  GenerateMemo.ml  Hash.ml  Intmap.ml  Ir.ml  Lexer.mll  MCRC32C.ml  Memo.ml  MemoTree.ml  Mfvs.ml  Parser.mly  Pat.ml  Pattern.ml  Profile.ml  Read.ml  Reference.ml  RegAlloc.ml  Resolve.ml  SL2.ml  Seq.ml  State.ml  SynInfo.ml  Syntax.ml  (+20 more)
lib/compiler/: Code.ml  CompileMemo.ml  CompilePlain.ml  CompileSeq.ml  Ir.ml  Liveness.ml
lib/frontend/: Pat.ml  Syntax.ml  Transform.ml  Typing.ml
lib/runtime/: Dependency.ml  Eviction.ml  Eviction.mli  Kll.ml  Kll.mli  Memo.ml  Pattern.ml  State.ml  Tail.ml  Value.ml
lib/support/: AntHashtbl.ml  Common.ml  Hash.ml  Timer.ml  Words.ml
output/: index.html
proof/: README.md  all.agda  compatibility.agda  core.agda  existence.agda  validity.agda
test/: dune  test_ant.ml
tools/: build_artifact_archive.sh  common.py  coverage_comment.py  generate_report.py  generate_speedup_index.py  plot_speedup.py  render_live_index.css  render_live_index.py  stats.py  style.css
vscode-ant/: README.md  ant-syntax-highlighting-0.0.1.vsix  language-configuration.json  package.json
vscode-ant/scripts/: polyfill-file.js
vscode-ant/syntaxes/: ant.tmLanguage.json
website/: .gitignore  README.md  book.toml.in  doc.py
website/src/: SUMMARY.md  compiler.md  data.md  language.md  matching.md  overview.md
website/theme/: ant.css
