(library
 (name ant)
 (libraries pprint batteries core)
 (modules
  Lexer
  Tokens
  Parser
  Syntax
  Tyck
  Seq
  Transform
  Fresh
  Memo
  Word
  SL2
  MCRC32C
  Common)
 (preprocess
  (pps ppx_string ppx_let ppx_deriving.show))
 (foreign_stubs
  (language c)
  (names sl2_stubs crc32c_stubs)
  (flags -Wall -march=native -O3 -DSSE2NEON_SUPPRESS_WARNINGS)))

(include_subdirs qualified)

(ocamllex Lexer)

(menhir
 (modules Tokens)
 (explain false)
 (flags --only-tokens))

(menhir
 (modules Parser Tokens)
 (merge_into Parser)
 (explain true)
 (flags
  --external-tokens
  Tokens
  --unused-tokens
  --unused-precedence-levels
  --exn-carries-state))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
